@@ -477,6 +477,14 @@ end.join
     assert_raise(SystemStackError){m}
   end
 
+  def test_machine_stackoverflow
+    bug9109 = '[ruby-dev:47804] [Bug #9109]'
+    assert_separately([], <<-SRC)
+    h = {a: ->{h[:a].call}}
+    assert_raise(SystemStackError, #{bug9109.dump}) {h[:a].call}
+    SRC
+  end
+
   def test_cause
     msg = "[Feature #8257]"
     cause = nil
